# mnxdom

./: .gitignore  BaseTypes_8h_source.html  BoilerplateMacros_8h_source.html  CMakeLists.txt  CommonClasses_8h_source.html  ContentArrayAppendOverloads_8h_source.html  ContentArray_8h_source.html  Document_8h_source.html  Dynamics_8h_source.html  EntityMap_8h_source.html  Enumerations_8h_source.html  EventMarkings_8h_source.html  FormattedText_8h_source.html  Global_8h_source.html  IdMapping_8h_source.html  LICENSE  LayoutHelpers_8h_source.html  Layout_8h_source.html  MnxdomProvenance_8h_source.html  MusicTheoryConversions_8h_source.html  Part_8h_source.html  README.md  Score_8h_source.html  Sequence_8h_source.html  Validation_8h_source.html  WalkSequenceContent_8h_source.html  annotated.html  annotated_dup.js  classes.html  classmnx_1_1Array-members.html  classmnx_1_1Array.html  classmnx_1_1Array.js  classmnx_1_1ArrayElementObject-members.html  classmnx_1_1ArrayElementObject.html  classmnx_1_1ArrayElementObject.js  classmnx_1_1Base-members.html  classmnx_1_1Base.html  classmnx_1_1Base.js  classmnx_1_1ContentArray-members.html  classmnx_1_1ContentArray.html  (+667 more)
.github/workflows/: build_and_test.yml
cmake/: GenerateMnxSchemaXxd.cmake  MnxW3C.cmake  mnxdom.pc.in
docs/: Doxyfile
schema/: mnx-schema.json
scripts/: update-w3c-mnx.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  (+85 more)
src/: BaseTypes.h  BoilerplateMacros.h  CommonClasses.h  ContentArray.h  ContentArrayAppendOverloads.h  Document.h  Dynamics.h  EnumerationMaps.cpp  Enumerations.h  EventMarkings.h  FormattedText.h  Global.h  Implementations.cpp  Layout.h  MnxdomProvenance.h  Part.h  Score.h  Sequence.h  mnxdom.h
src/music_theory/: music_theory.hpp
src/util/: EntityMap.h  IdMapping.h  LayoutHelpers.h  MusicTheoryConversions.h  WalkSequenceContent.h
src/validation/: SchemaValidate.cpp  SemanticValidate.cpp  Validation.h
tests/: CMakeLists.txt  test_beams.cpp  test_document.cpp  test_global.cpp  test_layouts.cpp  test_main.cpp  test_ottavas.cpp  test_scores.cpp  test_sequences.cpp  test_utils.h
tests/data/inputs/errors/: 8th_plus_grace.json  arpeggio_bad_position.json  arpeggio_same_sequence_grace_index_mismatch.json  bad_ties.json  beam_out_of_order.json  beam_wrong_measure.json  big_alter.json  clef_invalid_staff.json  duplicate_layouts.json  duplicate_measures.json  duplicate_parts.json  duplicate_sequence_voice.json  dynamics_missing_required_attrs.json  empty_sequence_voice.json  event_errors.json  layer1-2.json  layout_invalid_staffnum.json  layout_with_bad_part.json  layout_with_empty_part.json  layoutspans.json  lyrics_invalid_lineids.json  measures_mismatch.json  missing_initial_clef.json  mmrest_edgecase.json  non_arpeggio_bad_order.json  nonexistent_lyric_line_id.json  orchestral_layout_bad.json  score_bad_layout.json  score_layoutchange_bad_layout.json  score_mmrest_bad_span.json  score_mmrest_bad_start.json  score_no_systems.json  score_page_bad_layout.json  score_system_bad_layout.json  score_system_bad_measure.json  score_system_bad_start.json  score_system_bad_start2.json  sequence_fullmeasure_nonempty_content.json
tests/data/inputs/examples/: accidentals.json  beam_grace_notes.json  beam_hooks.json  beam_over_barlines.json  beam_secondaries.json  beams.json  dynamics.json  grace_notes_beamed.json  key_signatures.json  orchestral-layout.json  orchestral_layout.json  organ-layout.json  organ_layout.json  ottavas.json  system-layouts.json  system_layouts.json  tuplets.json
tests/data/inputs/test_cases/: arpeggio_same_sequence_implicit_grace_index_valid.json  arpeggio_same_sequence_implicit_primary_valid.json  arpeggio_valid.json  arpeggio_valid_implicit_grace_index.json  beams_secondary_map.json  chamberorch.json  enharmonic_ties.json  key7-7-wrapped.json  key7-7.json  ottavas_complex.json  ottavas_cross_measure_ties.json  ottavas_grace_boundaries.json  ottavas_grace_measure_end.json  ottavas_overlapping.json  ottavas_space_host.json  ottavas_staff_voice_specific.json  ottavas_voice_policy.json  time-6-8.json
tests/data/inputs/validation/: invalid_mnx.json  unrelated_json.json
tests/validation/: test_document.cpp  test_examples.cpp  test_global.cpp  test_layouts.cpp  test_parts.cpp  test_scores.cpp
